--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hazy",
+  "name": "hazyair",
   "version": "1.0.0",
   "description": "Dust concentration monitoring tool.",
-  "main": "hazy.js",
+  "main": "hazyair.js",
   "scripts": {
     "postinstall": "cd public && npm install",
     "configure": "sudo npm install pm2 -g && sudo ./deploy.sh",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/marcin-sielski/hazy.git"
+    "url": "https://github.com/marcin-sielski/hazyair.git"
   },
   "keywords": [
     "pm1.0",
