--- a/public/package.json
+++ b/public/package.json
@@ -8,6 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "c3": "^0.4.18"
+    "axios": "^0.17.1",
+    "c3": "^0.4.18",
+    "es6-promise": "^4.2.2"
   }
 }
