--- a/public/package.json
+++ b/public/package.json
@@ -8,8 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.17.1",
     "c3": "^0.4.18",
-    "es6-promise": "^4.2.2"
+    "promise-polyfill": "^7.0.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
