--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hazyair",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Weather parameters monitoring tool.",
   "main": "hazyair.js",
   "scripts": {
@@ -35,7 +35,14 @@
     "tempreature",
     "humidity",
     "pressure",
-    "weather station"
+    "weather station",
+    "raspberry",
+    "raspberry pi",
+    "pi",
+    "bme280",
+    "bmp280",
+    "ds18b20",
+    "plantower"
   ],
   "author": "Marcin Sielski",
   "license": "MIT",
