--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "bosh": "sudo ./scripts/bosh.sh",
     "deploy": "pm2 start server.js && pm2 save && pm2 startup | grep -v PM2 | sh",
     "undeploy": "pm2 stop server && pm2 delete server && pm2 save && pm2 unstartup | grep -v PM2 | sh",
-    "start": "pm2 start server.js",
+    "start": "pm2 start server.js --wait-ready",
     "stop": "pm2 stop server",
-    "restart": "pm2 restart server",
+    "restart": "pm2 restart server --wait-ready",
+    "reload": "pm2 reload server --wait-ready",
     "delete": "pm2 delete server",
     "show": "pm2 show server"
   },
@@ -49,9 +50,11 @@
   "dependencies": {
     "berkeleydb": "^0.2.1",
     "bme280-sensor": "^0.1.6",
+    "colors": "^1.1.2",
     "cron": "^1.3.0",
     "ds18b20": "^0.1.0",
     "express": "^4.16.2",
+    "http-shutdown": "^1.2.0",
     "moment": "^2.20.1",
     "plantower": "^1.1.6",
     "pouchdb-node": "^6.4.1",
