Add BME280 support.

--- a/package.json
+++ b/package.json
@@ -43,7 +43,22 @@
     "bme280",
     "bmp280",
     "ds18b20",
-    "plantower"
+    "pms1003",
+    "pms3003",
+    "pms5003",
+    "pms5003i",
+    "pms5003p",
+    "pms5003s",
+    "pms5003st",
+    "pms5003t",
+    "pms6003",
+    "pms7003",
+    "pms7003m",
+    "pms7003p",
+    "pmsa003",
+    "plantower",
+    "bosh",
+    "maxim"
   ],
   "author": "Marcin Sielski",
   "license": "MIT",
