--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hazyair",
-  "version": "1.3.7",
+  "version": "1.4.0",
   "description": "Weather parameters monitoring tool.",
   "main": "hazyair.js",
   "scripts": {
@@ -78,6 +78,7 @@
     "express": "^4.16.2",
     "http-shutdown": "^1.2.0",
     "moment": "^2.20.1",
+    "node-fetch": "^1.7.3",
     "plantower": "^1.1.6",
     "pouchdb-node": "^6.4.1",
     "sds011-wrapper": "^1.0.0",
