--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-dinky
+github:
+    API: https://github.com/marcin-sielski/hazyair/wiki/API
+    NPM: https://www.npmjs.com/package/hazyair 
