--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-dinky
 github:
     api_url: https://github.com/marcin-sielski/hazyair/wiki/API
     npm_url: https://www.npmjs.com/package/hazyair
+    owner_name: Marcin Sielski
