--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-dinky
 github:
-    api_url: https://github.com/marcin-sielski/hazyair/wiki
+    hw_url: https://github.com/marcin-sielski/hazyair/wiki
     api_url: https://github.com/marcin-sielski/hazyair/wiki/API
     npm_url: https://www.npmjs.com/package/hazyair
     owner_name: Marcin Sielski
