--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hazyair",
   "version": "1.4.1",
-  "description": "Weather parameters monitoring tool.",
+  "description": "Air quality monitoring tool.",
   "main": "hazyair.js",
   "scripts": {
     "postinstall": "cd public && npm install && sudo npm install pm2 -g",
