--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hazyair",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "Air quality monitoring tool.",
   "main": "hazyair.js",
   "scripts": {
@@ -74,6 +74,7 @@
     "berkeleydb": "^0.2.1",
     "bme280-sensor": "^0.1.6",
     "colors": "^1.1.2",
+    "console-stamp": "^0.2.6",
     "cron": "^1.3.0",
     "ds18b20": "^0.1.0",
     "express": "^4.16.2",
