--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hazyair",
-  "version": "1.4.5",
+  "version": "1.4.6",
   "description": "Air quality monitoring tool.",
   "main": "hazyair.js",
   "scripts": {
@@ -65,7 +65,7 @@
     "sds021",
     "plantower",
     "nova",
-    "bosh",
+    "bosch",
     "maxim",
     "thingspeak"
   ],
