--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hazyair",
-  "description": "Dust concentration monitoring tool.",
+  "description": "Air quality monitoring tool.",
   "author": "Marcin Sielski",
   "repository": {
     "type": "git",
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "c3": "^0.4.18",
     "promise-polyfill": "^7.0.0",
     "whatwg-fetch": "^2.0.3"
