--- a/public/package.json
+++ b/public/package.json
@@ -1,7 +1,15 @@
 {
+  "description": "Air quality monitoring tool.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marcin-sielski/hazyair.git"
+  },
+  "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "c3": "^0.4.18",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "promise-polyfill": "^7.0.0",
     "whatwg-fetch": "^2.0.3"
   }
