--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hazyair",
-  "version": "1.4.9",
+  "version": "1.5.0",
   "description": "Air quality monitoring tool.",
   "main": "hazyair.js",
   "scripts": {
     "postinstall": "cd public && npm install && sudo npm install pm2 -g",
-    "installdocs": "sudo npm install jsdoc-to-markdown -g && cd .. && git clone https://github.com/marcin-sielski/hazyair.wiki.git",
+    "installdocs": "sudo npm install jsdoc-to-markdown -g && cd .. && git clone https://github.com/marcin-sielski/hazyair.wiki.git && cd hazyair",
     "generatedocs": "jsdoc2md hazyair.js > ../hazyair.wiki/API.md",
     "plantower": "sudo ./scripts/plantower.sh",
     "nova": "sudo ./scripts/plantower.sh",
