--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hazyair",
-  "version": "1.6.7",
+  "version": "1.6.8",
   "description": "Air quality monitoring tool.",
   "main": "hazyair.js",
   "scripts": {
@@ -99,6 +99,7 @@
     "chalk": "^2.4.2",
     "console-stamp": "^0.2.9",
     "cron": "^1.7.2",
+    "csv-writer": "^1.6.0",
     "ds18b20": "^0.1.0",
     "express": "^4.17.1",
     "hazyair-dweetio": "1.0.1",
